# MLOPS-CS317.P21

./: .gitignore  Dockerfile  Dockerfile.retrain  README.md  api.py  docker-compose.yml  mlflow_run_id.txt  pipeline.py  pipeline_prefect.py  predict.py  pyproject.toml  readme.md  requirements.txt  retraining_service.py
data/processed/: test.csv  train.csv
monitoring/: README.md
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: api-metrics.json  dashboard.yml  model-metrics.json  server-metrics.json
monitoring/grafana/datasources/: datasource.yml
monitoring/logging/: logging_config.json
monitoring/prometheus/: prometheus.yml  rules.yml
src/: evaluate.py  preprocess.py  train.py
