[project]
name = "mlops-cs317-p21"
version = "0.1.0"
description = "Sentiment Analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "matplotlib>=3.10.3",
    "mlflow>=2.22.0",
    "nltk>=3.9.1",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "prefect>=3.4.2",
    "prometheus-client>=0.22.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
